--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.12.1",
+    "element-plus": "^2.11.2",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
