--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "element-plus": "^2.11.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
+    "video.js": "^8.23.4",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
