--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.12.1",
+    "chart.js": "^4.5.0",
     "element-plus": "^2.11.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
