--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^5.0.1",
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.12.1",
     "chart.js": "^4.5.0",
