--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.12.1",
     "chart.js": "^4.5.0",
+    "ckeditor5": "^47.3.0",
     "element-plus": "^2.11.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
